manifests/example/kube-applier-deploy-keys-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-applier
spec:
  template:
    spec:
      containers:
      - name: kube-applier
        volumeMounts:
        - name: ssh-deploy-keys
          mountPath: /root/.ssh/
        - name: ssh-config
          mountPath: /root/.ssh/config
          subPath: config
      volumes:
      - name: ssh-deploy-keys
        secret:
          secretName: ssh-deploy-keys
          defaultMode: 0400
      - name: ssh-config
        configMap:
          name: ssh-config
