manifests/example/kube-applier-kustomize-ssh-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-applier
spec:
  template:
    spec:
      containers:
      - name: kube-applier
        volumeMounts:
        - name: ssh-config
          mountPath: /root/.ssh/config
          subPath: config
      volumes:
      - name: ssh-config
        configMap:
          name: ssh-config
