manifests/example/kube-applier-kustomize-ssh-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-applier
spec:
  template:
    spec:
      containers:
      - name: kube-applier
        volumeMounts:
        - name: ssh-deploy-keys
          mountPath: /root/.ssh/
      volumes:
      - name: ssh-deploy-keys
        secret:
          secretName: ssh-deploy-keys
          defaultMode: 0400
