manifests/example/kube-applier-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-applier
spec:
  template:
    spec:
      containers:
      - name: kube-applier
      - name: git-sync
